--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
 asgiref==3.7.2
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==41.0.1
+defusedxml==0.7.1
 Django==4.2.2
-sqlparse==0.4.4
+django-extensions @ git+https://github.com/django-extensions/django-extensions.git@25a41d8a3ecb24c009c5f4cac6010a091a3c91c8
+idna==3.4
+oauthlib==3.2.2
 Pillow==9.5.0
+pycparser==2.21
+PyJWT==2.7.0
+python3-openid==3.2.0
+requests==2.31.0
+requests-oauthlib==1.3.1
+social-auth-app-django @ git+https://github.com/python-social-auth/social-app-django.git@20fabcd7bd9a8a41910bc5c8ed1bd6ef2263b328
+social-auth-core==4.4.2
+sqlparse==0.4.4
+urllib3==2.0.3
+Werkzeug==2.3.6
+pyOpenSSL==23.2.0
